# tide

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: context.cpp  context.h  main.cpp  textpanel.cpp  textpanel.h  timer.h
src/commands/: command.cpp  command.h  keybinding.cpp  keybinding.h
src/components/: activityholder.cpp  activityholder.h  component.cpp  component.h  fontparams.cpp  fontparams.h
src/components/palette/: commandpalette.cpp  commandpalette.h
src/components/textpanel/: container.cpp  container.h  textpanel.cpp  textpanel.h
src/engine/: assert.h  engine.h  io.cpp  io.h  types.cpp  types.h  window.cpp  window.h
src/engine/gfx/: font.cpp  font.h  gfx.h  shaderprogram.cpp  shaderprogram.h  texture.cpp  texture.h  vao.cpp  vao.h
src/prefab/: model.cpp  model.h
src/textpanel/: container.cpp  container.h  textpanel.cpp  textpanel.h  textpanelcontainer.cpp  textpanelcontainer.h
tests/: optimisation.cpp  test.cpp
